log/build_2023-04-29_11-32-41/battery_node/stderr.log
/home/yueju/.local/lib/python3.10/site-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/yueju/led/install/battery_node/lib/python3.10/site-packages/battery_node/node_battery.py", line 15
    request=SetLed. 
                    ^
SyntaxError: invalid syntax

